kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-os-server
  namespace: unifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "unifi.example.com"
    secretName: tls-secret
  rules:
    - host: unifi.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-os-server-webui-svc
                port:
                  number: 443
